fix layout bugs

--- a/src/app/components/homepage/content-container/content-container.component.scss
+++ b/src/app/components/homepage/content-container/content-container.component.scss
@@ -22,6 +22,7 @@
 .video {
     grid-row-end: span 2;
     width: 100%;
+    background: red;
 }
 .photo {
     width: 100%;
